# oneMind

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
apps/desktop/: README.md  tsconfig.electron.main.json  tsconfig.electron.preload.json  tsconfig.json
apps/desktop/src/: index.css  router.tsx
apps/tauri-probe/: README.md  package.json  pnpm-lock.yaml
apps/tauri-probe/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-probe/tools/: build-probe.cmd  run-portable.cmd  run-probe.cmd
desktop/electron/: README.md  index.html  package.json  pnpm-lock.yaml
desktop/electron/electron/: main.ts  preload.cts
desktop/electron/src/: App.css
desktop/tauri/: README.md  package.json
desktop/tauri/probe-static/: index.html
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/src/: float_note_focus.rs  lib.rs  main.rs  sync.rs
desktop/tauri/tools/: build-shell.cmd  dev-shell.cmd  run-built.cmd
docs/: README.zh-CN.md  releasing.md  tauri-env-check.md
docs/archive/: tauri-env-check.md
renderer/: package.json  vite.config.ts
renderer/src/: App.css  App.tsx  activity.ts  icons.ts  index.css  main.tsx  router.tsx
renderer/src/components/: MarkdownEditor.tsx
renderer/src/editor/: oneMindImage.ts
renderer/src/platform/: oneMindBridge.ts  tauriBridge.ts
renderer/src/shell/: AppShell.tsx  ContextMenu.tsx
renderer/src/styles/: milkdown-adapter.css
renderer/src/types/: global.d.ts
tools/: tauri-env-check.ps1
(+23 files in other folders)
